--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,8 +15,8 @@
 @import "./layout/_header";
 @import "./layout/_section_Home";
 @import "./layout/_section_destination";
-@import "./layout/section_crew";
-@import "./layout/section_techno";
+@import "./layout/_section_crew";
+@import "./layout/_section_techno";
 
 // pages
 
