--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -13,14 +13,16 @@ html {
     // 10px div by def of 16px
     font-size: 62.5%;
      width: 100vw;
+    height:100%;
      margin: 0;
-     
+    overflow-Y:scroll;
+    overflow-x:hidden;
     
 }
 
 body {
-    width:100vmax;
-    height: 100vmin;
+    width:100vw;
+    height: 100%;
     box-sizing: border-box;
     background: url($the_desktop_background)  ;
     background-size:cover;
@@ -60,11 +62,11 @@ body {
      @media (max-width:map-get($breakpoint,tablet)) {
 
             background: url($the_tablet_background) ;
-            width:768px;
+            width:100vw;
             background-size:cover;
             background-repeat: no-repeat;
-            height:1024px;
-            overflow: hidden;
+            height:100%;
+            overflow-x: hidden;
             
 
       
@@ -83,11 +85,10 @@ body {
         background: url($the_mobile_background) ;
         background-size:cover;
         background-repeat: no-repeat;
-
-      width:100vw;
-      height:100vh;
-        // overflow-y:clip;
-        
+        width:100vw;
+        height:100%;
+        overflow-x:hidden;
+        margin: 0;
     }
     
 }
