--- a/sass/layout/_section_Home.scss
+++ b/sass/layout/_section_Home.scss
@@ -1,48 +1,42 @@
 // the breakpoint for the desktop
 @media screen and (min-width: map-get($breakpoint, desktop)) {
-    .section_home1{
+    .section_home1 {
         height: auto;
         width: 100%;
         display: flex;
         flex-direction: row;
-        position:relative ;
-        z-index:17;
+        position: relative;
+        z-index: 17;
 
-        }
+    }
 
-        /*scss pour injection de section lors du srool du menu debut */
+    /*scss pour injection de section lors du srool du menu debut */
 
-    .destination_section{
-        // visibility: hidden;
-        // display: none;
-        transform:translate(100%);
-        // transition:transform 20ms ;
-        position: absolute;
-        width:100% ;
-        z-index:10;
-
-}
-   .crew_section {
-       // visibility: hidden;
-       // display: none;
-       transform: translate(200%);
-       // transition:transform 20ms ;
+    .destination_section {
+        transform: translate(100%);
        position: absolute;
-       width: 100%;
-       z-index: 10;
+        width: 100%;
+        z-index: 10;
 
-   }
-      .techno_section {
-          // visibility: hidden;
-          // display: none;
-          transform: translate(300%);
-          // transition:transform 20ms ;
-          position: absolute;
-          width: 100%;
-          z-index: 10;
+    }
 
-      }
-        /*fin */
+    .crew_section {
+        transform: translate(200%);
+        position: absolute;
+        width: 100%;
+        z-index: 10;
+
+    }
+
+    .techno_section {
+        transform: translate(300%);
+        position: absolute;
+        width: 100%;
+        z-index: 10;
+
+    }
+
+    /*fin */
 
 
     .section_home {
@@ -51,22 +45,35 @@
         color: $color_tereciare;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        z-index: index 12;;
-
-        // display: none;
-        // transition:transform 20ms;
+        justify-content: space-around;
+        z-index: index 12;
         
 
-        
-        
+       
 
-        div {
-            width: 450px;
-            height: 382px;
+        div:nth-child(1) {
+            max-width: 480px;
+            width: 34%;
+            height: 57%;
+            max-height: 382px;
+            // background-color: blueviolet;
+            margin-top: 255px;
+            margin-left: 8%;
+
+        }
+
+
+        div:nth-child(2) {
+            max-width: 450px;
+            width: 33%;
+            height: 59%;
+            max-height: 382px;
             // background-color: aqua;
             margin-top: 255px;
-            margin-left: 105px;
+            margin-right: 5%;
+
+
+
         }
 
 
@@ -78,59 +85,150 @@
 
 // the breakpoint for the tablet
 @media screen and (max-width: map-get($breakpoint, tablet)) {
-    .section_home {
-        height: auto;
+    .section_home1 {
+        height: 100%;
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        z-index: 17;
+
+    }
+
+    /*scss pour injection de section lors du srool du menu debut */
+
+    .destination_section {
+        // visibility: hidden;
+        // display: none;
+        transform: translate(100%);
+        // transition:transform 20ms ;
+        position: absolute;
         width: 100%;
+        z-index: 10;
+
+    }
+
+    .crew_section {
+        // visibility: hidden;
+        // display: none;
+        transform: translate(200%);
+        // transition:transform 20ms ;
+        position: absolute;
+        width: 100%;
+        z-index: 10;
+
+    }
+
+    .techno_section {
+        // visibility: hidden;
+        // display: none;
+        transform: translate(300%);
+        // transition:transform 20ms ;
+        position: absolute;
+        width: 100%;
+        z-index: 10;
+
+    }
+
+    /*fin */
+    .section_home {
+        height: 100%;
+        width: 100vw;
         color: $color_tereciare;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
-        // transform: translate(50%);
-        // transition: transform 50s;
+        justify-content: center;
+        align-items: center;
+        
+       
+          div:nth-child(1) {
+               max-width: 450px;
+               min-width: 150px;
+               width: 56%;
+               height: 57%;
+               max-height: 382px;
+            //    background-color: blueviolet;
+               margin-top: 45px;
+              
+            
+            
+               
+           
+               }
+             
+
+          
+
+          div:nth-child(2) {
+              max-width: 450px;
+              width: 33%;
+              height: 59%;
+              max-height: 382px;
+            //   background-color: aqua;
+              margin-top: 255px;
+              transform: translate(-20%,-25%);
+            
 
 
-        div {
-            width: 450px;
-            height: 334px;
-            margin-top: 51px;
-            margin-left: 81px;
-        }
 
-        // margin:auto ;
+          }
     }
-
-
-
 }
+
+       
+    
+
+
+
+
 
 
 
 // the breakpoint for the mobile
 @media screen and (max-width: map-get($breakpoint, mobile)) {
     .section_home {
-        height: auto;
-        width: 100%;
+        width: 100vw;
+        height:100%;
         color: $color_tereciare;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
-        // transform: translate(50%);
-        // transition: transform 50s;
+        justify-content: center;
+        align-items: center;
+        
+        
 
-
-        div {
-            width: 327px;
-            height: 276px;
-            margin-top: 35px;
-            margin-left: 31px;
-        }
-
-
-
-    }
+    div:nth-child(1) {
+    max-width: 527px;
+    // min-width: 350px;
+    width: 86%;
+    height: 87%;
+    min-height:350px ;
+    max-height: 276px;
+    // background-color: blueviolet;
+    margin-top: 15px;
 }
 
 
 
 
+div:nth-child(2) {
+    max-width: 327px;
+    width: 73%;
+    height: 59%;
+    max-height: 276px;
+    // background-color: aqua;
+    margin-top: 200px;
+    transform: translateX(5%) translateY(-89%);
+      
 
+  
+
+
+
+
+}
+
+
+
+    }
+}
