--- a/sass/layout/_section_crew.scss
+++ b/sass/layout/_section_crew.scss
@@ -1,49 +1,55 @@
 // the breakpoint for the desktop
 @media screen and (min-width: map-get($breakpoint, desktop)) {
     .crew_section {
-        // color: white;
+        
 
         .left_crew {
 
             .titre_crew {
-                width: 486px;
+                max-width: 486px;
+                width: 90%;
                 height: 34px;
-                margin-left: 100.5px;
+                margin-left: 10%;
                 margin-top: 20px;
-                color: red;
+                
             }
 
 
             .h2_crew {
-
-                width: 414px;
+                max-width: 414px;
+                width: 90%;
                 height: 37px;
-                margin-left: 100.5px;
+                margin-left: 10%;
                 margin-top: 80px;
+                
             }
 
             .h1_crew {
-                width: 788px;
+                max-width: 788px;
+                width: 90%;
                 height: 64px;
-                margin-left: 100.5px;
+                margin-left: 10%;
                 margin-top: 9px;
             }
 
             .paragraphe_crew {
-                width: 244px;
-                height: 58px;
-                margin-left: 100.5px;
+                max-width: 244px;
+                width:100%;
+                height: 100px;
+                margin-left: 10%;
                 margin-top: 10px;
+                
             }
 
 
             .radio_btn {
-                width: 100px;
+                max-width: 100px;
+                width: 100%;
                 height: auto;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                margin-top: 150px;
+                margin-top: 180px;
                 margin-left: 100.5px;
                 color: $color_secodaire;
 
@@ -107,10 +113,11 @@
 
         .right_crew {
             img {
+                max-width: 412px;
+                width: 90%;
                 height: 412px;
-                width: 412px;
                 margin-left: -54px;
-                margin-top: 105px;
+                margin-top: 192px;
                 border-radius: 0px;
 
             }
@@ -141,55 +148,46 @@
 
 
             .titre_crew {
-                width: 204px;
+                max-width: 204px;
+                width: 90%;
                 height: 24px;
-                // margin-left: 100.5px;
-                // margin-top: 20px;
+                left: 10%;
+                top: 10px;
                 position: absolute;
-                left: 38.5px;
-                top: 136px;
 
 
+            }
+
+            aside{
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
 
             .h2_crew {
-                // width: 314px;
-                // height: 37px;
-                // margin-left: 263.5px;
-                // margin-top: 80px;
-
-                position: absolute;
+                max-width: 314px;
+                width: 90%;
                 height: 28px;
-                left: 32.42%;
-                right: 32.42%;
-                top: calc(35% - 28px/2 - 77px);
+                top: 117px;
+                position: absolute;
             }
 
             .h1_crew {
-                // width: 644px;
-                // height: 58px;
-                // margin-left: 100.5px;
-                // margin-top: 10px;
-                position: absolute;
+                max-width: 644px;
+                width: 100%;
                 height: 46px;
-                left: 0.11%;
-                right: 0.11%;
-                top: calc(35% - 46px/2 - 32px);
+                top: 170px;
+                position: absolute;
             }
 
             .paragraphe_crew {
-                // width: 244px;
-                // height: 58px;
-                // margin-left: 272.5px;
-                // margin-top: 10px;
-                width: 458px;
-                position: absolute;
+               
+                max-width: 458px;
+                width: 90%;
                 height: 84px;
-                left: 0%;
-                right: 0%;
-                top: calc(35% - 84px/2 + 49px);
-                transform: translate(30%, 0%);
+                top: calc(220px - 84px/2 + 49px);
+                position: absolute;
 
 
             }
@@ -206,8 +204,8 @@
                 position: absolute;
                 width: 88px;
                 height: 10px;
-                left: 340px;
-                top: 500px;
+                
+                top: 390px;
             }
 
             input[type]:not(:checked) {
@@ -218,9 +216,7 @@
 
 
 
-
-
-            // code des stackoverflow pour le btn radio
+     // code des stackoverflow pour le btn radio
             input[type='radio']:after {
                 content: '';
                 width: 15px;
@@ -258,24 +254,19 @@
 
 
         .right_crew {
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
 
 
             img {
-                // height: 472px;
-                // width: 356px;
-                // margin-left: 99px;
-                // margin-right: 62px;
-                // margin-top: 40px;
-                // flex-direction: column;
-                // justify-content: center;
-
-
-                position: absolute;
-                width: 400.37px;
+                
+                max-width: 400.37px;
+                width: 90%;
                 height: 400px;
-                left: 155.85px;
-                top: 623px;
+                position: absolute;
+               top: 489px;
 
 
 
@@ -313,59 +304,60 @@
 // the breakpoint for the mobile
 @media screen and (max-width: map-get($breakpoint, mobile)) {
     .crew_section {
-        color: white;
-        // visibility:hidden ;
-        // display: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
 
         .left_crew {
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             .titre_crew {
-                width: 166px;
-                height: 19px;
-                left: 105px;
-                top: 88px;
-                position: absolute;
+               max-width: 166px;
+               width: 90%;
+               height: 19px;
+               top: -10px;
+            position: absolute;
 
             }
 
 
             .h2_crew {
-                position: absolute;
+                max-width: 300px;
+                width:90%;
                 height: 18px;
-                width: 300px;
-                left: 9.3%;
-                right: 26.3%;
-                top: calc(62% - 18px/2 - 18px);
+                top: calc(350px - 18px/2 - 18px);
+                position: absolute;
 
             }
 
             .h1_crew {
                 position: absolute;
                 height: 28px;
-                left: 0%;
-                right: 0%;
-                top: calc(62% - 28px/2 + 13px);
+                top: calc(348px  - 28px/2 + 13px);
             }
 
             .paragraphe_crew {
                 position: absolute;
                 height: 125px;
-                width: 327px;
-                left: -17%;
-                right: 0%;
-                top: calc(75% - 125px/2 + 35px);
+                max-width: 327px;
+                width: 90%;
+                top: calc(420px - 125px/2 + 35px);
 
             }
 
             .radio_btn {
-                width: 100px;
+                max-width: 100px;
+                width: 90%;
                 height: auto;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                margin-top: -117px;
-                margin-left: -208.5px;
+                margin-top: -105px;
                 color: $color_secodaire;
+                z-index: 100;
 
 
 
@@ -409,18 +401,22 @@
 
         .right_crew {
             position: absolute;
-            width: 327px;
+            max-width: 327px;
+            width: 90%;
             height: 223px;
             left: 24px;
             top: 139px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             img {
 
                 position: absolute;
-                width: 153.92px;
+                max-width: 153.92px;
+                width: 90%;
                 height: 222px;
-                left: 75px;
-                top: -7px;
+                top: -87px;
             }
 
         }
@@ -429,11 +425,12 @@
         .right_crew::after {
             content: "";
             position: absolute;
-            width: 327px;
+            max-width: 327px;
+            width:90%;
             height: 1px;
             background-color: $color_secodaire;
             left: 2px;
-            top: 213px;
+            top: 135px;
         }
 
     }
