--- a/sass/layout/_section_destination.scss
+++ b/sass/layout/_section_destination.scss
@@ -1,118 +1,127 @@
 // the breakpoint for the desktop
 @media screen and (min-width: map-get($breakpoint, desktop)) {
-    .left {
-        p {
-            // background-color: red;
-            width: 582px;
-            height: 34px;
-            margin-left: 140.5px;
-            margin-top: 1px;
-            cursor: pointer;
+    .destination_section {
 
-            span:nth-child(1) {
-                margin-right: 10px;
+
+        .left {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            p {
+                
+                max-width: 582px;
+                width: 90%;
+                height: 34px;
+                margin-top: 1px;
+                cursor: pointer;
+
+                span:nth-child(1) {
+                    margin-right: 10px;
+
+                }
 
             }
 
+
+
+            img {
+                max-width: 445px;
+                width: 90%;
+                max-height: 445px;
+                height: 90%;
+                margin-top: 40px;
+                cursor: auto;
+
+
+
+
+            }
         }
 
 
 
-        img {
-            margin-top: 40px;
-            margin-left: 111px;
-            height: 445px;
-            width: 445px;
-            cursor: auto;
+
+        .right {
 
 
 
-
-        }
-    }
-
-
-
-
-    .right {
-
-
-
-        ul {
-            display: flex;
-            flex-direction: row;
-            margin-top: 60px;
-            height: 34px;
-            width: 285.5px;
-            cursor: pointer;
+            ul {
+                display: flex;
+                flex-direction: row;
+                margin-top: 60px;
+                height: 34px;
+                max-width: 285.5px;
+                width: 50%;
+                cursor: pointer;
 
 
 
-            @for $i from 2 through 4 {
-                li:nth-child(#{$i}) {
-                    margin-left: 17px;
+                @for $i from 2 through 4 {
+                    li:nth-child(#{$i}) {
+                        margin-left: 17px;
+                    }
+                }
+
+                li:hover {
+                    border-bottom: $color_secodaire 5px solid;
+                    padding-bottom: 20px;
                 }
             }
 
-            li:hover {
-                border-bottom: $color_secodaire 5px solid;
+
+
+
+            &_firstP {
+                height: 158px;
+                max-width: 405px;
+                width: 60%;
+
+                // background: blue;
+                text-align: justify;
+                margin-bottom: 5px;
+
+            }
+
+            hr {
+                height: 2px;
+                max-width: 444px;
+                width: 90%;
+                margin-bottom: 6%;
+                background: #383B4B;
+            }
+
+            &_mini-footeur {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-top: -20px;
+                max-width: 444px;
+                width: 90%;
+
+
+                p {
+                    cursor: pointer;
+                }
+
+                p:nth-child(2) {
+                    margin-top: 10px;
+                }
+
+            }
+
+            //the class for js
+            .active2 {
+                // transition: all 0.3ms ease-in-out;
+                border-bottom: 5px $color_tereciare solid;
                 padding-bottom: 20px;
+
             }
         }
 
-
-
-
-        &_firstP {
-            height: 158px;
-            width: 405px;
-            // background: blue;
-            text-align: justify;
-            margin-bottom:5px ;
-
-        }
-
-        hr {
-            height: 2px;
-            width: 444px;
-            background: #383B4B;
-        }
-
-        &_mini-footeur {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            margin-top: -20px;
-            width: 444px;
-
-            p {
-                cursor: pointer;
-            }
-
-            p:nth-child(2) {
-                margin-top: 10px;
-            }
-
-        }
-
-        //the class for js
-        .active2 {
-            // transition: all 0.3ms ease-in-out;
-            border-bottom: 5px $color_tereciare solid;
-            padding-bottom: 20px;
-
-        }
     }
-
-
 }
-
-
-
-
-
-
-
 
 
 
@@ -139,111 +148,146 @@
 
 // the breakpoint for the tablet
 @media screen and (max-width: map-get($breakpoint, tablet)) {
-    .left {
-        p {
-            // background-color: red;
-            width: 272px;
-            height: 24px;
-            margin-left: 38.5px;
-            margin-top: 1px;
-            cursor: pointer;
+    .destination_section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       
 
-            span:nth-child(1) {
-                margin-right: 10px;
+        .left {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            p {
+                max-width: 772px;
+                width: 99%;
+                height: 24px;
+                margin-top: -332px;
+                cursor: pointer;
+                position: absolute;
+
+                span:nth-child(1) {
+                    margin-right: 10px;
+
+                }
 
             }
 
+
+
+            img {
+                max-width: 300px;
+                max-height: 300px;
+                width: 90vw;
+                height: 90vh;
+                margin-top: 33px;
+                // background-color: red;
+                
+
+
+
+
+
+            }
         }
 
 
 
-        img {
-            width: 300px;
-            height: 300px;
-            margin-left: 239px;
-            margin-top: 33px;
-            cursor: auto;
 
-
-
-
-        }
-    }
-
-
-
-
-    .right {
-
-
-
-        ul {
+        .right {
             display: flex;
-            flex-direction: row;
-            margin-top: 17px;
-            height: 34px;
-            width: 285.5px;
-            cursor: pointer;
-            transform: translate(90%);
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+
+
+            ul {
+                display: flex;
+                flex-direction: row;
+                margin-top: 17px;
+                height: 34px;
+                max-width: 285.5px;
+                width: 60%;
+                cursor: pointer;
+
+
+                 display: flex;
+                 flex-direction:row;
+                 justify-content: center;
+                 align-items: center;
+                
 
 
 
 
-            @for $i from 2 through 4 {
-                li:nth-child(#{$i}) {
-                    margin-left: 17px;
+                @for $i from 2 through 4 {
+                    li:nth-child(#{$i}) {
+                        margin-left: 17px;
+                        
+                    }
+                }
+
+                li:hover {
+                    border-bottom: $color_secodaire 5px solid;
+                    padding-bottom: 20px;
+                
                 }
             }
 
-            li:hover {
-                border-bottom: $color_secodaire 5px solid;
+.h1{
+    margin-top:10px;
+    max-width: 273px;
+    width:99%;
+    height: 84px;
+}
+
+            &_firstP {
+                max-width: 573px;
+                width:99%;
+                height: 84px;
+                margin-top: 28px;
+                text-align: center;
+
+            }
+
+            hr {
+                height: 2px;
+                max-width: 573px;
+                width:90%;
+                margin-top:20px ;
+                background: #383B4B;
+            }
+
+            &_mini-footeur {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-top: 20px;
+                max-width: 444px;
+                width:90%;
+                
+
+                p {
+                    cursor: pointer;
+                }
+
+                p:nth-child(2) {
+                    margin-top: 10px;
+                }
+
+            }
+
+            //the class for js
+            .active2 {
+                
+                border-bottom: 5px $color_tereciare solid;
                 padding-bottom: 20px;
+
             }
-        }
-
-
-
-
-        &_firstP {
-            width: 573px;
-            height: 84px;
-            margin-left: 97px;
-            margin-top: -28px;
-            text-align: center;
-
-        }
-
-        hr {
-            height: 2px;
-            width: 573px;
-            transform: translate(19%);
-            background: #383B4B;
-        }
-
-        &_mini-footeur {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            margin-top: -20px;
-            width: 444px;
-            transform: translate(46%);
-
-            p {
-                cursor: pointer;
-            }
-
-            p:nth-child(2) {
-                margin-top: 10px;
-            }
-
-        }
-
-        //the class for js
-        .active2 {
-            // transition: all 0.3ms ease-in-out;
-            border-bottom: 5px $color_tereciare solid;
-            padding-bottom: 20px;
-
         }
     }
 }
@@ -255,116 +299,134 @@
 // the breakpoint for the mobile
 @media screen and (max-width: map-get($breakpoint, mobile)) {
 
+    .destination_section {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        .left {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            p {
+                
+                // background-color: red;
+             max-width: 321px;
+             width: 90%;
+             height: 19px;
+             margin-top: -242px;
+             cursor: pointer;
+             z-index: 10;
 
-    .left {
-        p {
-            // background-color: red;
-            width: 221px;
-            height: 19px;
-            margin-left: 97.5px;
-            margin-top: -31px;
-            cursor: pointer;
+                span:nth-child(1) {
+                    margin-right: 10px;
 
-            span:nth-child(1) {
-                margin-right: 10px;
+                }
 
             }
 
+
+
+            img {
+                max-width: 170px;
+                max-height: 170px;
+                width:90%;
+                height:90%;
+                margin-top: 13px;
+                cursor: auto;
+            }
+
+
+
         }
 
 
 
-        img {
-            width: 170px;
-            height: 170px;
-            margin-left: 138px;
-            margin-top: 33px;
-            cursor: auto;
+
+
+        .right {
 
 
 
-
-        }
-    }
-
-
-
-
-    .right {
-
-
-
-        ul {
-            display: flex;
-            flex-direction: row;
-            margin-top: -118px;
-            height: 34px;
-            width: 285.5px;
-            cursor: pointer;
-            transform: translate(44%);
+            ul {
+                max-width: 285.5px;
+                width: 90%;
+                height: 34px;
+                display: flex;
+                flex-direction: row;
+                margin-top: 10px;
+                cursor: pointer;
+               
 
 
 
+                @for $i from 2 through 4 {
+                    li:nth-child(#{$i}) {
+                        margin-left: 17px;
+                    }
+                }
 
-            @for $i from 2 through 4 {
-                li:nth-child(#{$i}) {
-                    margin-left: 17px;
+                li:hover {
+                    border-bottom: $color_secodaire 5px solid;
+                    padding-bottom: 20px;
                 }
             }
 
-            li:hover {
-                border-bottom: $color_secodaire 5px solid;
+            h1 {
+                margin-top: -181px;
+                
+            }
+
+
+            &_firstP {
+                max-width: 327px;
+                width: 90%;
+                height: 142px;
+                margin-top: -10px;
+                text-align: center;
+                
+            }
+
+            hr {
+                height: 2px;
+                max-width: 327px;
+                width: 90%;
+                background: #383B4B;
+                margin-top: 120px;
+                position: absolute;
+            }
+
+            &_mini-footeur {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                margin-top: 50px;
+                max-width: 400px;
+                width: 90%;
+                transform: translateX(29%) translateY(30%);
+
+                p {
+                    cursor: pointer;
+                }
+
+                p:nth-child(2) {
+                    margin-top: 15px;
+                }
+
+                div:nth-child(2) {
+                    margin-top: 30px;
+                }
+
+            }
+
+            //the class for js
+            .active2 {
+                // transition: all 0.3ms ease-in-out;
+                border-bottom: 5px $color_tereciare solid;
                 padding-bottom: 20px;
+
             }
-        }
-
-        h1 {
-            margin-top: -114px;
-            margin-left: 0px;
-        }
-
-
-        &_firstP {
-            width: 327px;
-            height: 142px;
-            margin-left: 77px;
-            margin-top: -28px;
-            text-align: center;
-
-        }
-
-        hr {
-            height: 2px;
-            width: 327px;
-            transform: translate(19%);
-            background: #383B4B;
-        }
-
-        &_mini-footeur {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            margin-top: -20px;
-            width: 444px;
-            transform: translate(38%);
-
-            p {
-                cursor: pointer;
-            }
-
-            p:nth-child(2) {
-                margin-top: 5px;
-            }
-
-        }
-
-        //the class for js
-        .active2 {
-            // transition: all 0.3ms ease-in-out;
-            border-bottom: 5px $color_tereciare solid;
-            padding-bottom: 20px;
-
         }
     }
-
 }
