--- a/sass/layout/_section_techno.scss
+++ b/sass/layout/_section_techno.scss
@@ -1,14 +1,17 @@
 @media screen and (min-width: map-get($breakpoint, desktop)) {
     .techno_section {
+        
 
 
         .left_techno {
+            position: relative;
 
             h3 {
                 position: absolute;
-                width: 405px;
+                max-width: 405px;
+                width: 90%;
                 height: 34px;
-                left: 100.5px;
+                left: 129.5px;
                 top: 30px;
             }
 
@@ -23,13 +26,15 @@
                 position: absolute;
                 width: 180px;
                 height: 200px;
-                left: 105px;
+                left: 10%;
                 top: 299px;
             }
 
             .btn_techno button {
-                width: 50px;
-                height: 50px;
+                max-width: 50px;
+                width: 90%;
+                max-height: 50px;
+                height: 90%;
                 border-radius: 500px;
                 border: 1px $color_tereciare solid;
                 background-color: transparent;
@@ -54,26 +59,27 @@
             h4 {
                 position: absolute;
                 height: 19px;
-                left: 15%;
-                right: 68.09%;
+                left: 26%;
+                // right: 68.09%;
                 top: calc(70% - -397.5px - 142px);
-                ;
+                
             }
 
             h1 {
                 position: absolute;
                 height: 64px;
-                left: 15%;
-                right: 0%;
+                left: 26%;
+                // right: 0%;
                 top: calc(70% - -401px - 89.5px);
             }
 
             p {
                 position: absolute;
                 height: 192px;
-                width: 500px;
-                left: 15%;
-                right: 5.53%;
+                max-width: 500px;
+                width: 90%;
+                left: 26%;
+                // right: 5.53%;
                 top: calc(17% - -359px + 55.5px);
 
 
@@ -96,13 +102,20 @@
 
 
         .right_techno {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            position: relative;
+            
+            
 
 
             img {
                 position: absolute;
-                width: 500px;
+                max-width: 500px;
+                width: 70%;
                 height: 427px;
-                left: 825px;
                 top: 182px;
 
             }
@@ -130,22 +143,27 @@
 
 @media screen and (max-width: map-get($breakpoint, tablet)) {
     .techno_section {
-
-        // display: none;
-        // visibility: hidden;
-        overflow: hidden;
+   
         .left_techno {
+            position: relative;
 
             h3 {
                 position: absolute;
-                width: 217px;
+                max-width: 217px;
+                width: 90%;
                 height: 24px;
                 left: 38.5px;
-                top: 136px;
+                top: 50px;
             }
 
             h3 span:nth-child(1) {
                 margin-right: 10px;
+            }
+            aside{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: row;
             }
 
             .btn_techno {
@@ -155,13 +173,15 @@
                 position: absolute;
                 width: 210px;
                 height: 60px;
-                left: 279px;
+                
                 top: 496px;
             }
 
             .btn_techno button {
-                width: 50px;
-                height: 50px;
+                max-width: 50px;
+                width: 100%;
+                max-height: 50px;
+                height: 100%;
                 border-radius: 500px;
                 border: 1px $color_tereciare solid;
                 background-color: transparent;
@@ -183,26 +203,21 @@
             h4 {
                 position: absolute;
                 height: 19px;
-                left: 40.84%;
-                right: 33.41%;
-                top: calc(70% - 19px/2 - 109px);
+                top: calc(690px - 19px/2 - 109px);
             }
 
             h1 {
                 position: absolute;
                 height: 46px;
-                left: 0.11%;
-                right: 0.11%;
-                top: calc(70% - 46px/2 - 60.5px);
+                top: calc(690px - 46px/2 - 60.5px);
             }
 
             p {
                 position: absolute;
                 height: 140px;
-                width:458px ;
-                left: 25%;
-                right: 0%;
-                top: calc(70% - 140px/2 + 48.5px);
+                max-width:458px;
+                width:90%;
+                top: calc(700px - 140px/2 + 48.5px);
 
 
 
@@ -224,14 +239,17 @@
 
 
         .right_techno {
+            position: relative;
+
 
 
             img {
                 position: absolute;
-                width: 768px;
+                max-width: 768px;
+                width: 100%;
                 height: 310px;
-                left: 0px;
-                top: 170px;
+                
+                top: 150px;
 
             }
         }
@@ -258,18 +276,22 @@
 @media screen and (max-width: map-get($breakpoint, mobile)) {
     .techno_section {
 
-        // display: none;
-        // visibility: hidden;
-        overflow: hidden;
 
         .left_techno {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
 
             h3 {
                position: absolute;
-               width: 250px;
+               max-width: 250px;
+               width: 90%;
                height: 59px;
-               left: 90px;
-               top: 78px;
+               top: -58px;
+               
+               
             }
 
             h3 span:nth-child(1) {
@@ -281,10 +303,12 @@
                 flex-direction: row;
                 justify-content: space-between;
                 position: absolute;
-                width: 210px;
-                height: 60px;
-                left: 79px;
-                top: 336px;
+                max-width: 210px;
+                width: 90%;
+                max-height:60px;
+                height:100%;
+                
+                top: 189px;
             }
 
             .btn_techno button {
@@ -301,6 +325,8 @@
             //     color: $color_primaire;
 
             // }
+
+            // class for js
             .btn_techno .checked {
                 background-color: $color_tereciare;
                 color: $color_primaire;
@@ -310,29 +336,30 @@
 
             h4 {
                 position: absolute;
-                width:150px ;
-                height: 19px;
-                left: 30.84%;
-                right: 33.41%;
-                top: calc(74% - 19px/2 - 109px);
+                max-width:150px;
+                width:90%;
+                max-height:19px;
+                height:90%;
+                top: calc(374px - 19px/2 - 109px);
             }
 
             h1 {
                 position: absolute;
-                height: 46px;
-                left: 0.11%;
-                right: 0.11%;
-                top: calc(74% - 46px/2 - 60.5px);
+                max-height: 46px;
+                height: 90%;
+                max-width:400px;
+                width:90%;
+                top: calc(374px - 46px/2 - 60.5px);
             }
 
             p {
                 position: absolute;
-                height: 140px;
-                width: 358px;
-                left: 0%;
-                right: 0%;
-                top: calc(72% - 140px/2 + 48.5px);
-
+                max-height: 140px;
+                height: 90%;
+                max-width: 358px;
+                width:90%;
+                top: calc(372px - 140px/2 + 48.5px);
+                
 
 
             }
@@ -347,6 +374,7 @@
 
 
  .right_techno {
+    position: relative;
 
 
             img {
@@ -354,7 +382,7 @@
                width: 100%;
                height: 200px;
                left: 0px;
-               top: 120px;
+               top: -20px;
             
 
             }
